Fixes Spacings
SRFCMSAL-2445

--- a/source/_patterns/20-molecules/medium/medium.scss
+++ b/source/_patterns/20-molecules/medium/medium.scss
@@ -52,7 +52,7 @@
   display: block;
   padding: 4px 8px;
   @include tablet-up {
-    padding: 8px 12px;
+    padding: 8px $article-offset;
   }
 }
 
@@ -80,7 +80,7 @@
 
   &.medium--video-gallery {
     .medium__notice-text {
-      padding: 8px 12px;
+      padding: 8px $article-offset;
     }
   }
 
@@ -163,7 +163,7 @@
     padding: 4px 8px;
 
     @include tablet-up {
-      padding: 8px 12px;
+      padding: 8px $article-offset;
     }
   }
 
@@ -212,7 +212,7 @@
 
     @include tablet-up {
       @include fontSize(12);
-      padding: 8px 12px;
+      padding: 8px $article-offset;
     }
   }
 
